--- a/e_m_adventures/public/index.html
+++ b/e_m_adventures/public/index.html
@@ -29,6 +29,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap"
       rel="stylesheet"
     />
+    <!-- MAPBOX STYLE SHEET -->
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
